--- a/mspaymentservice/src/main/resources/application.properties
+++ b/mspaymentservice/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-server.port=8062
-spring.datasource.url=jdbc:mysql://localhost:3306/orderdb
+
+server.port=8063
+spring.datasource.url=jdbc:mysql://localhost:3306/paymentdb
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -7,7 +8,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL57InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
-spring.application.name=ORDER-SERVICE
+spring.application.name=PAYMENT-SERVICE
 
 spring.config.import=optional:configserver:http://localhost:9296
 
@@ -15,5 +16,4 @@ spring.config.import=optional:configserver:http://localhost:9296
 #eureka.client.fetch-registry=true
 #eureka.client.register-with-eureka=true
 #eureka.client.service-url.defaultzone=http://localhost:8761/eureka
-
 
